# cghs

./: .gitignore  .gitmodules  LICENSE  README.md  cghs.cabal  run.sh  stack.yaml
Cghs/: Utils.hs
Cghs/Algorithms/: ConvexHull2.hs  DelaunayTriangulation2.hs  Triangulation2.hs  VoronoiDiagram2.hs
Cghs/Graphics/: Event.hs  OGLUtils.hs  RenderableItem.hs  Types.hs  Utils.hs
Cghs/Types/: Circle2.hs  Line2.hs  Orientation.hs  PlaneRegion2.hs  PointVector2.hs  Polygon2.hs  Ray2.hs  Segment2.hs  Triangle2.hs
Graphics/: OGLUtils.hs  RenderableItem.hs
Math/: CGUtils.hs
Math/Algorithms/: ConvexHull2.hs  Triangulation2.hs
Math/Types/: Circle2.hs  Line2.hs  Orientation.hs  PointVector2.hs  Polygon2.hs  Segment2.hs  Triangle2.hs
Math/Utils/: Monad.hs  Tuple.hs
src/: viewer.hs
test/: Main.hs  UnitTests.hs
viewer/: Main.hs
viewer/Graphics/: Event.hs  RenderableItem.hs  Types.hs  Utils.hs
