name:                cghs
version:             0.1.0
synopsis:            Geometric algorithms in Haskell
description:         A computational geometry library written in Haskell.
                     It defines basic geometric types like points, vectors, segments..
                     and contains 2D algorithms like convex hulls, triangulations...
homepage:            https://github.com/nyorem/cghs
bug-reports:         https://github.com/nyorem/cghs/issues
license:             MIT
license-file:        LICENSE
author:              Jocelyn MEYRON
maintainer:          Jocelyn.Meyron@ensimag.grenoble-inp.fr
category:            Math
build-type:          Simple
cabal-version:       >=1.10

source-repository   head
    type:           git
    location:       git://github.com/nyorem/cghs

library
    exposed-modules:     Cghs.Utils,
                         Cghs.Types.Circle2,
                         Cghs.Types.Orientation,
                         Cghs.Types.PointVector2,
                         Cghs.Types.Line2,
                         Cghs.Types.Polygon2,
                         Cghs.Types.Segment2,
                         Cghs.Types.Triangle2,
                         Cghs.Algorithms.ConvexHull2,
                         Cghs.Algorithms.Triangulation2,
                         Cghs.Graphics.OGLUtils,
                         Cghs.Graphics.Types,
                         Cghs.Graphics.RenderableItem
    build-depends:       base >=4.6 && <4.8,
                         GLFW-b >= 1.4.6,
                         OpenGL >= 2.9.2.0
    default-language:    Haskell2010
    ghc-options:         -Wall

executable viewer
    hs-source-dirs:      src
    main-is:             viewer.hs
    default-language:    Haskell2010
    build-depends:       base >=4.6 && < 4.8,
                         cghs >= 0.1.0,
                         GLFW-b >= 1.4.6,
                         OpenGL >= 2.9.2.0
    ghc-options:         -Wall

test-suite unit-tests
    type:           exitcode-stdio-1.0
    default-language:    Haskell2010
    main-is:        Main.hs
    hs-source-dirs: test
    build-depends:
      base,
      HUnit,
      test-framework             >= 0.6,
      test-framework-hunit,
      test-framework-quickcheck2 >= 0.2,
      test-framework-th          >= 0.2

