name:                cghs
version:             0.1.0
synopsis:            Geometric algorithms in Haskell
description:         A computational geometry library written in Haskell.
                     It defines basic geometric types like points, vectors, segments..
                     and contains 2D algorithms like convex hulls, triangulations...
homepage:            https://github.com/nyorem/cghs
bug-reports:         https://github.com/nyorem/cghs/issues
license:             MIT
license-file:        LICENSE
author:              Jocelyn MEYRON
maintainer:          Jocelyn.Meyron@ensimag.grenoble-inp.fr
category:            Math
build-type:          Simple
cabal-version:       >=1.10

source-repository   head
    type:           git
    location:       git://github.com/nyorem/cghs

library
    exposed-modules:     Cghs.Utils,
                         Cghs.Types.Circle2,
                         Cghs.Types.Orientation,
                         Cghs.Types.PointVector2,
                         Cghs.Types.Line2,
                         Cghs.Types.PlaneRegion2,
                         Cghs.Types.Polygon2,
                         Cghs.Types.Ray2,
                         Cghs.Types.Segment2,
                         Cghs.Types.Triangle2,
                         Cghs.Algorithms.ConvexHull2,
                         Cghs.Algorithms.DelaunayTriangulation2,
                         Cghs.Algorithms.Triangulation2,
                         Cghs.Algorithms.VoronoiDiagram2
    build-depends:       base >= 4.6 && < 4.13,
                         bifunctors >= 4.2 && < 5.6
    default-language:    Haskell2010
    ghc-options:         -Wall

executable viewer
    hs-source-dirs:      viewer
    main-is:             Main.hs
    default-language:    Haskell2010
    build-depends:       base >= 4.6 && < 4.13,
                         cghs >= 0.1.0 && < 0.2,
                         GLFW-b >= 1.4.6 && < 3.3,
                         OpenGL >= 2.9.2.0 && < 3.1,
                         lens >= 4.7 && < 4.18
    other-modules:       Graphics.Event,
                         Graphics.Types,
                         Graphics.Utils,
                         Graphics.RenderableItem
    ghc-options:         -Wall

